23-06-03 tensorflow gpu 의 메모리 용량 제한을 추가 readme에 분류 문제별 해결 현황 추가

--- a/test.ipynb
+++ b/test.ipynb
@@ -275,10 +275,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 452ms/step\n",
+      "[[0.0000000e+00 1.0000000e+00 8.5117706e-28]\n",
+      " [0.0000000e+00 1.0000000e+00 0.0000000e+00]\n",
+      " [1.0000000e+00 3.3700031e-35 0.0000000e+00]\n",
+      " [1.0000000e+00 1.3158974e-19 0.0000000e+00]\n",
+      " [0.0000000e+00 1.0000000e+00 0.0000000e+00]\n",
+      " [0.0000000e+00 0.0000000e+00 1.0000000e+00]\n",
+      " [1.0000000e+00 1.4602315e-27 0.0000000e+00]\n",
+      " [0.0000000e+00 0.0000000e+00 1.0000000e+00]\n",
+      " [1.0000000e+00 2.4845295e-16 0.0000000e+00]\n",
+      " [0.0000000e+00 1.0000000e+00 1.6942224e-33]\n",
+      " [1.0000000e+00 0.0000000e+00 0.0000000e+00]\n",
+      " [0.0000000e+00 1.0000000e+00 0.0000000e+00]\n",
+      " [1.0000000e+00 9.0455008e-36 0.0000000e+00]\n",
+      " [1.0000000e+00 0.0000000e+00 0.0000000e+00]\n",
+      " [0.0000000e+00 1.8117375e-33 1.0000000e+00]\n",
+      " [0.0000000e+00 1.0000000e+00 6.7984806e-36]\n",
+      " [0.0000000e+00 1.7472901e-25 1.0000000e+00]\n",
+      " [0.0000000e+00 6.2991115e-37 1.0000000e+00]\n",
+      " [0.0000000e+00 0.0000000e+00 1.0000000e+00]\n",
+      " [0.0000000e+00 1.0598510e-30 1.0000000e+00]\n",
+      " [1.0000000e+00 1.7519910e-30 0.0000000e+00]\n",
+      " [0.0000000e+00 1.0000000e+00 0.0000000e+00]\n",
+      " [0.0000000e+00 1.0000000e+00 0.0000000e+00]\n",
+      " [1.0000000e+00 7.4562871e-27 0.0000000e+00]\n",
+      " [0.0000000e+00 0.0000000e+00 1.0000000e+00]\n",
+      " [0.0000000e+00 0.0000000e+00 1.0000000e+00]\n",
+      " [0.0000000e+00 0.0000000e+00 1.0000000e+00]\n",
+      " [0.0000000e+00 1.0000000e+00 0.0000000e+00]\n",
+      " [0.0000000e+00 1.0000000e+00 0.0000000e+00]\n",
+      " [1.0000000e+00 0.0000000e+00 0.0000000e+00]]\n",
+      "[[0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]]\n",
+      "1/1 [==============================] - 0s 88ms/step - loss: 0.0000e+00 - accuracy: 1.0000\n",
+      "[0.0, 1.0]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-06-02 14:34:49.851147: I tensorflow/stream_executor/cuda/cuda_blas.cc:1614] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from tensorflow.keras import layers\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "\n",
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "def get_xor():\n",
+    "    x = np.array([[0,0],[0,1],[1,0],[1,1]])\n",
+    "    y = np.array([[0],[1],[1],[0]])\n",
+    "\n",
+    "    return x,y\n",
+    "\n",
+    "def get_iris():\n",
+    "    iris = load_iris()\n",
+    "    x = iris.data\n",
+    "    y = iris.target\n",
+    "\n",
+    "    y = keras.utils.to_categorical(y, 3)\n",
+    "\n",
+    "    x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, shuffle=True, stratify=y)\n",
+    "\n",
+    "    return x_train, x_test, y_train, y_test\n",
+    "\n",
+    "# model = keras.models.load_model(\"./result/xor/06-02-13-31/75_0.35_0.8_0.6.h5\")\n",
+    "model = keras.models.load_model(\"./result/iris/06-02-13-48/50_0.4_0.8_0.7.h5\")\n",
+    "# x,y = get_xor()\n",
+    "x_train, x_test, y_train, y_test = get_iris()\n",
+    "\n",
+    "print(model.predict(x_test))\n",
+    "print(y_test)\n",
+    "print(model.evaluate(x_test,y_test))"
+   ]
   }
  ],
  "metadata": {
