--- a/test.ipynb
+++ b/test.ipynb
@@ -391,13 +391,51 @@
     "print(y_test)\n",
     "print(model.evaluate(x_test,y_test))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-06-11 14:01:31.378413: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow version: 2.12.0\n",
+      "Linked TRT ver: (8, 4, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "print(\"TensorFlow version:\", tf.__version__)\n",
+    "import tensorflow.compiler as tf_cc\n",
+    "import tensorrt as trt\n",
+    "linked_trt_ver=tf_cc.tf2tensorrt._pywrap_py_utils.get_linked_tensorrt_version()\n",
+    "print(f\"Linked TRT ver: {linked_trt_ver}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "pso",
    "language": "python",
-   "name": "pso"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
