23-08-06 메모리 누수 다소 해결 Fixes #2 EBPSO 의 구현 부분의 문제가 있어 수정중

--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "from keras.models import Sequential\n",
     "from tensorflow import keras\n",
     "\n",
-    "from pso import Optimizer\n",
+    "from pso import optimizer\n",
     "\n",
     "\n",
     "def get_data():\n",
@@ -61,7 +61,6 @@
     "    model.add(Flatten())\n",
     "    model.add(Dense(128, activation=\"relu\"))\n",
     "    model.add(Dense(10, activation=\"softmax\"))\n",
-    "\n",
     "\n",
     "    return model"
    ]
@@ -187,7 +186,7 @@
     "]\n",
     "\n",
     "\n",
-    "pso_mnist = Optimizer(\n",
+    "pso_mnist = optimizer(\n",
     "    model,\n",
     "    loss=loss[0],\n",
     "    n_particles=70,\n",
